tdf#133079 ensure Sheet root is selected if nothing else would be

Change-Id: I01d45bfa8f410dcf35a9ecc90b295b7c75ccc746